Setting a reply probability in env

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 SUBREDDIT=test
 SLEEP=10
+SUBMISSION_PROBABILITY=0.1
+COMMENT_PROBABILITY=0.1
+MODE=production
 BOT_NAME=username
 PASSWORD=password
 CLIENT_ID=client
