--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ SUBREDDIT=test
 SLEEP=10
 SUBMISSION_PROBABILITY=0.1
 COMMENT_PROBABILITY=0.1
-MODE=production
+ENV=production
+MODE=loop/once
 BOT_NAME=username
 PASSWORD=password
 CLIENT_ID=client
