--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ SUBREDDIT=test
 SLEEP=10
 SUBMISSION_PROBABILITY=0.1
 COMMENT_PROBABILITY=0.1
+REPLY_AGE=7 # days
 ENV=production
 MODE=loop/once
 BOT_NAME=username
